deploy: 046ad891128d05b49cb34159c80be834c45093d2

--- a/etc/english_word.html
+++ b/etc/english_word.html
@@ -24,9 +24,9 @@
         <link rel="stylesheet" href="../fonts/fonts.css">
 
         <!-- Highlight.js Stylesheets -->
-        <link rel="stylesheet" href="../highlight.css">
-        <link rel="stylesheet" href="../tomorrow-night.css">
-        <link rel="stylesheet" href="../ayu-highlight.css">
+        <link rel="stylesheet" id="highlight-css" href="../highlight.css">
+        <link rel="stylesheet" id="tomorrow-night-css" href="../tomorrow-night.css">
+        <link rel="stylesheet" id="ayu-highlight-css" href="../ayu-highlight.css">
 
         <!-- Custom theme stylesheets -->
 
@@ -159,16 +159,29 @@
                 <div id="content" class="content">
                     <main>
                         <h1 id="단어장"><a class="header" href="#단어장">단어장</a></h1>
+<h2 id="후디니"><a class="header" href="#후디니">후디니</a></h2>
+<div class="table-wrapper"><table><thead><tr><th></th><th></th><th></th></tr></thead><tbody>
+<tr><td>bevel</td><td>비스듬한 면</td><td>노드 있음</td></tr>
+<tr><td>seam</td><td>경계선, 이음매</td><td></td></tr>
+<tr><td>Lattice</td><td>격자, 격자모양</td><td>이 노드로 공간 왜곡같은 효과 주는게 가능</td></tr>
+<tr><td>cusp</td><td>(두 곡선이 만나는 뾰족한) 끝</td><td>Normal 노드에서 angle 조절</td></tr>
+<tr><td>vein</td><td>정맥, (식물의) 잎맥, 돌결, 나뭇결</td><td>Point VOP에서 사용가능한 노드</td></tr>
+<tr><td>subdivision</td><td>다시 나눔, 세분</td><td>노드 있음</td></tr>
+<tr><td>Curvature</td><td>곡률</td><td>Labs Measure Curvature노드</td></tr>
+<tr><td>Tubulent</td><td>난류 - 유체의 흐름이 바르지 않고 상하좌우로 섞이면서 흐르는 것</td><td>Tubulent Noise</td></tr>
+</tbody></table>
+</div>
+<hr />
 <p>Ledge - (벽에서 튀어나온) 선반, 돌출부.
 Beam - 기둥
 Truss - 트러스(지붕·교량 따위를 버티기 위해 떠받치는 구조물)
 Pillar - (다리·건물 지붕 등을 받치는, 특히 장식 겸용의 둥근) 기둥
 Plank - 널빤지
 Shingle - 조약돌, 지붕널, 대상 포진
-Chimney - 굴뚝</p>
+Chimney - 굴뚝
+annual rings, tree ring - 나이테</p>
 <p>profile - 윤곽, (얼굴의) 옆모습
-Skew - 왜곡하다, 비스듬히 움직이다
-subdivision - 다시 나눔, 세분</p>
+Skew - 왜곡하다, 비스듬히 움직이다</p>
 <p>직각삼각형 right-angled triangle
 밑변 B base
 빗변 H hypotenuse
@@ -176,9 +189,6 @@ subdivision - 다시 나눔, 세분</p>
 <p>topology 폴리곤 구조와 배열
 retopology 토폴리지 재구성
 principled - 절조 있는, 원칙에 입각한</p>
-<p>bevel - 비스듬한 면
-seam - 경계선, 이음매
-Lattice - 격자, 격자모양</p>
 
                     </main>
 
@@ -188,6 +198,9 @@ Lattice - 격자, 격자모양</p>
                                 <i class="fa fa-angle-left"></i>
                             </a>
 
+                            <a rel="next prefetch" href="../etc/license.html" class="mobile-nav-chapters next" title="Next chapter" aria-label="Next chapter" aria-keyshortcuts="Right">
+                                <i class="fa fa-angle-right"></i>
+                            </a>
 
                         <div style="clear: both"></div>
                     </nav>
@@ -199,6 +212,9 @@ Lattice - 격자, 격자모양</p>
                         <i class="fa fa-angle-left"></i>
                     </a>
 
+                    <a rel="next prefetch" href="../etc/license.html" class="nav-chapters next" title="Next chapter" aria-label="Next chapter" aria-keyshortcuts="Right">
+                        <i class="fa fa-angle-right"></i>
+                    </a>
             </nav>
 
         </div>
