--- a/etc/snippet.html
+++ b/etc/snippet.html
@@ -24,9 +24,9 @@
         <link rel="stylesheet" href="../fonts/fonts.css">
 
         <!-- Highlight.js Stylesheets -->
-        <link rel="stylesheet" href="../highlight.css">
-        <link rel="stylesheet" href="../tomorrow-night.css">
-        <link rel="stylesheet" href="../ayu-highlight.css">
+        <link rel="stylesheet" id="highlight-css" href="../highlight.css">
+        <link rel="stylesheet" id="tomorrow-night-css" href="../tomorrow-night.css">
+        <link rel="stylesheet" id="ayu-highlight-css" href="../ayu-highlight.css">
 
         <!-- Custom theme stylesheets -->
 
@@ -160,8 +160,7 @@
                     <main>
                         <h1 id="팁"><a class="header" href="#팁">팁</a></h1>
 <ul>
-<li>
-<p>이전 버전 노드가 안보일때는</p>
+<li>이전 버전 노드가 안보일때는
 <ul>
 <li>Assets &gt; Asset Definition Toolbar &gt; Show Always</li>
 <li>예)
@@ -172,26 +171,14 @@
 </li>
 </ul>
 </li>
-<li>
-<p>점을 선으로 잇기: add&gt; polygons&gt; by group</p>
-</li>
-<li>
-<p>선을 나누기 : resample</p>
-</li>
-<li>
-<p>내부 선 지우기: add&gt; points&gt; Delete Geometry But Keep the Points</p>
-</li>
-<li>
-<p>Rigid body dynamics : RBD to FBX</p>
-</li>
-<li>
-<p>감마: Edit&gt; Color Settings&gt; Color correction&gt; Gamma&gt; 1</p>
+<li>선을 나누기 : resample</li>
+<li>Rigid body dynamics : RBD to FBX</li>
+<li>감마: Edit&gt; Color Settings&gt; Color correction&gt; Gamma&gt; 1
 <ul>
 <li><a href="https://www.sidefx.com/docs/houdini/render/linear.html">https://www.sidefx.com/docs/houdini/render/linear.html</a></li>
 </ul>
 </li>
-<li>
-<p>각도설정</p>
+<li>각도설정
 <ul>
 <li>copytopoint로 circle을 점에 붙인다</li>
 <li>carve의 U를 이용 각도를 가진 점을 얻고 - 포인트가 0부터 시작하는걸 변하게 하는게 좋을듯</li>
@@ -199,22 +186,19 @@
 <li>add로 선을 이어주자 - polygons &gt; By Group</li>
 </ul>
 </li>
-<li>
-<p>어트리뷰트 비쥬얼라이제이션</p>
+<li>어트리뷰트 비쥬얼라이제이션
 <ul>
 <li>포인트 번호 표시해주는 툴바에 visualization 우클릭</li>
 </ul>
 </li>
-<li>
-<p>디버그용 선을 이어보기</p>
+<li>디버그용 선을 이어보기
 <ul>
 <li>어트리뷰트를 이용하여 정보용 점을 추가로 만들고</li>
 <li>merge</li>
 <li>Add&gt; By Group&gt; Add&gt; By Attribute&gt; Attribute Name 설정</li>
 </ul>
 </li>
-<li>
-<p>grid를 텍스쳐로 굽기</p>
+<li>grid를 텍스쳐로 굽기
 <ul>
 <li><a href="https://blog.naver.com/checkjei/222622327344">https://blog.naver.com/checkjei/222622327344</a></li>
 <li>geo &gt; grid / uvtexture / attribvop</li>
@@ -234,8 +218,7 @@
 <li>Render to Disk 버튼 클릭</li>
 </ul>
 </li>
-<li>
-<p>https://www.sidefx.com/docs/houdini/unity/sourcecontrol.html</p>
+<li>https://www.sidefx.com/docs/houdini/unity/sourcecontrol.html
 <ul>
 <li><UnityProject>/heu_session.txt : 현재 세션 정보를 저장하는 데 사용하는 임시 파일
 <ul>
@@ -266,8 +249,7 @@
 </li>
 </ul>
 </li>
-<li>
-<p>두 점 사이의 점</p>
+<li>두 점 사이의 점
 <ul>
 <li>subdivide로 가운데 점 찍고</li>
 <li>delete
@@ -323,37 +305,11 @@
 </ul>
 <hr />
 <ul>
-<li>
-<p>line</p>
-<ul>
-<li>origin: -ch("dist") / 2</li>
-</ul>
-</li>
-<li>
-<p>box</p>
-<ul>
-<li>center.y = ch("sizey")/2</li>
-</ul>
-</li>
-<li>
-<p>백틱(``) : 이름 활용</p>
-</li>
+<li>백틱(``) : 이름 활용</li>
 </ul>
 <pre><code class="language-txt">example_`rint(fit01(rand(detail("../foreach_begin2_metadata1/", "iteration", 0)), 1, 5))`
 </code></pre>
 <ul>
-<li>백틱(``) : 스위치에서 랜덤 활용</li>
-</ul>
-<pre><code class="language-txt">rand(detail("../foreach_begin2_metadata1/", "iteration", 0)) * opinputs(".")
-</code></pre>
-<ul>
-<li>
-<p>vex</p>
-<ul>
-<li>switch같은곳은 작아서 Ctrl+E로 확대해서 편집하자</li>
-<li>if(a==b, 1, 2) 같은 식으로 넣을 수 도 있음.</li>
-</ul>
-</li>
 <li>
 <p>blast</p>
 <ul>
@@ -432,18 +388,20 @@ else
 </li>
 </ul>
 <hr />
-<p>matrix  maketransform(int trs, int xyz, vector t, vector r, vector s)
-matrix  maketransform(vector zaxis, vector yaxis, vector translate)</p>
-<p>matrix location_matrix = maketransform(
-XFORM_TRS,
-XFORM_XYZ,
-p0,
-{0, 0, 0}
+<pre><code class="language-vex">matrix  maketransform(int trs, int xyz, vector t, vector r, vector s)
+matrix  maketransform(vector zaxis, vector yaxis, vector translate)
+
+matrix location_matrix = maketransform(
+    XFORM_TRS,
+    XFORM_XYZ,
+    p0,
+    {0, 0, 0}
 );
 matrix rotation_matrix = maketransform(right, world_up, {0, 0, 0});
 matrix m = rotation_matrix * location_matrix;
 @P = invert(m);
-@P = m;</p>
+@P = m;
+</code></pre>
 <hr />
 <p>상단 면 중앙에 점 찍기
 vex 방식
@@ -456,8 +414,7 @@ addpoint(0, center);
 blast/name/foreach(primitive)/extractcentroid 방식</p>
 <hr />
 <ul>
-<li>
-<p>카메라를 통한 디버그 메시지 보여주기</p>
+<li>카메라를 통한 디버그 메시지 보여주기
 <ul>
 <li>카메라노드에서 Edit Render Properties
 <ul>
@@ -466,39 +423,7 @@ blast/name/foreach(primitive)/extractcentroid 방식</p>
 </li>
 </ul>
 </li>
-<li>
-<p>각 구하기</p>
-</li>
 </ul>
-<pre><code class="language-vex">int ptnum_prev;
-int ptnum_next;
-
-int ptnum_last = npoints(0) - 1;
-if (@ptnum  == 0)
-{
-    ptnum_prev = ptnum_last;
-    ptnum_next = 1;
-}
-else if (@ptnum == ptnum_last)
-{
-    ptnum_prev = ptnum_last - 1;
-    ptnum_next = 0;
-}
-else
-{
-    ptnum_prev = @ptnum - 1;
-    ptnum_next = @ptnum + 1;
-}
-
-
-vector pos_prev = point(0, "P", ptnum_prev);
-vector pos_next = point(0, "P", ptnum_next);
-
-vector dir_prev = normalize(@P - pos_prev);
-vector dir_next = normalize(@P - pos_next);
-
-float angle = degrees(acros(dot(dir_prev, dir_next)));
-</code></pre>
 <hr />
 <ul>
 <li>분홍색 마크
@@ -511,6 +436,86 @@ float angle = degrees(acros(dot(dir_prev, dir_next)));
 </ul>
 </li>
 </ul>
+<hr />
+<ul>
+<li><a href="https://www.youtube.com/watch?v=qWD1nRqf2bk">Houdini Image Camera Matching</a>
+<ul>
+<li>houdini Perspective Match</li>
+<li>https://pixabay.com/photos/lost-places-hall-columns-pforphoto-2963764/</li>
+<li>https://fspy.io/
+<ul>
+<li>https://github.com/stuffmatic/fSpy</li>
+</ul>
+</li>
+<li>https://www.andre-gaschler.com/rotationconverter/
+<ul>
+<li>Input angle format / Output angle format을 Degree로 설정</li>
+</ul>
+</li>
+<li>이미지를 fspy로 불러와서 앵글을 잡는다
+<ul>
+<li>Vanishing points axes
+<ul>
+<li>1 : x</li>
+<li>2 : -z</li>
+</ul>
+</li>
+</ul>
+</li>
+<li>후디니
+<ul>
+<li>카메라 View
+<ul>
+<li>bacgkround image에 이미지 깔아주고</li>
+<li>resolution에 fspy Image Width/Height</li>
+<li>aperture에 fspy Focal length - Sensor.x</li>
+<li>Focal Length에 fspy Focal length - Value (mm)</li>
+</ul>
+</li>
+<li>카메라 Transform
+<ul>
+<li>Translate:
+<ul>
+<li>fspy Camera position x/y/z</li>
+</ul>
+</li>
+<li>Rotation
+<ul>
+<li>fspy의 Camera Orientation (Axis angle (degrees))를 rotationconverter에 복사(x/y/z/angle)</li>
+<li>rotationconverter의 Axis with angle magnitude (radians) [x, y, z]</li>
+</ul>
+</li>
+</ul>
+</li>
+</ul>
+</li>
+</ul>
+</li>
+<li>https://github.com/Njordy/nLib
+<ul>
+<li>https://www.youtube.com/watch?v=rVduzdrKYZg&amp;t=171s</li>
+</ul>
+</li>
+</ul>
+<hr />
+<ul>
+<li>HOUDINI_PATH
+<ul>
+<li>New Pane Tab Type &gt; Misc &gt; Textport
+<ul>
+<li>echo $HOUDINI_PATH</li>
+</ul>
+</li>
+<li>New Pane Tab Type &gt; Python Shell
+<ul>
+<li>hou.getenv("HOUDINI_PATH")</li>
+<li>hou.houdiniPath()</li>
+</ul>
+</li>
+</ul>
+</li>
+</ul>
+<hr />
 
                     </main>
 
@@ -520,7 +525,7 @@ float angle = degrees(acros(dot(dir_prev, dir_next)));
                                 <i class="fa fa-angle-left"></i>
                             </a>
 
-                            <a rel="next prefetch" href="../etc/plugin.html" class="mobile-nav-chapters next" title="Next chapter" aria-label="Next chapter" aria-keyshortcuts="Right">
+                            <a rel="next prefetch" href="../etc/snippet-node.html" class="mobile-nav-chapters next" title="Next chapter" aria-label="Next chapter" aria-keyshortcuts="Right">
                                 <i class="fa fa-angle-right"></i>
                             </a>
 
@@ -534,7 +539,7 @@ float angle = degrees(acros(dot(dir_prev, dir_next)));
                         <i class="fa fa-angle-left"></i>
                     </a>
 
-                    <a rel="next prefetch" href="../etc/plugin.html" class="nav-chapters next" title="Next chapter" aria-label="Next chapter" aria-keyshortcuts="Right">
+                    <a rel="next prefetch" href="../etc/snippet-node.html" class="nav-chapters next" title="Next chapter" aria-label="Next chapter" aria-keyshortcuts="Right">
                         <i class="fa fa-angle-right"></i>
                     </a>
             </nav>
