--- a/file/file.html
+++ b/file/file.html
@@ -24,9 +24,9 @@
         <link rel="stylesheet" href="../fonts/fonts.css">
 
         <!-- Highlight.js Stylesheets -->
-        <link rel="stylesheet" href="../highlight.css">
-        <link rel="stylesheet" href="../tomorrow-night.css">
-        <link rel="stylesheet" href="../ayu-highlight.css">
+        <link rel="stylesheet" id="highlight-css" href="../highlight.css">
+        <link rel="stylesheet" id="tomorrow-night-css" href="../tomorrow-night.css">
+        <link rel="stylesheet" id="ayu-highlight-css" href="../ayu-highlight.css">
 
         <!-- Custom theme stylesheets -->
 
@@ -173,21 +173,6 @@
 <tr><td>.bgeo</td><td>binary</td></tr>
 </tbody></table>
 </div>
-<ul>
-<li>https://www.sidefx.com/faq/question/houdini-engine-plugin-free-for-unity-and-ue4/</li>
-</ul>
-<div class="table-wrapper"><table><thead><tr><th>HOUDINI ENGINE</th><th></th><th></th></tr></thead><tbody>
-<tr><td>for Unity/Unreal</td><td>.hda</td><td>최대 10개</td></tr>
-<tr><td>INDIE</td><td>.hda .hdalc</td><td>최대 3대</td></tr>
-<tr><td>EDUCATION</td><td>.hda .hdalc .hdanc</td><td></td></tr>
-<tr><td>APPRENTICE</td><td>X</td><td></td></tr>
-</tbody></table>
-</div>
-<p>https://www.sidefx.com/docs/houdini/unity/
-https://github.com/sideeffects/HoudiniEngineForUnity
-https://www.sidefx.com/download/daily-builds/</p>
-<p>APPRENTICE</p>
-
                     </main>
 
                     <nav class="nav-wrapper" aria-label="Page navigation">
