--- a/game-engine/unity.html
+++ b/game-engine/unity.html
@@ -24,9 +24,9 @@
         <link rel="stylesheet" href="../fonts/fonts.css">
 
         <!-- Highlight.js Stylesheets -->
-        <link rel="stylesheet" href="../highlight.css">
-        <link rel="stylesheet" href="../tomorrow-night.css">
-        <link rel="stylesheet" href="../ayu-highlight.css">
+        <link rel="stylesheet" id="highlight-css" href="../highlight.css">
+        <link rel="stylesheet" id="tomorrow-night-css" href="../tomorrow-night.css">
+        <link rel="stylesheet" id="ayu-highlight-css" href="../ayu-highlight.css">
 
         <!-- Custom theme stylesheets -->
 
@@ -193,373 +193,6 @@
 <tr><td>unity_instance</td><td>point찍고 attr에 프리팝 경로 입력하면 알아서 생성해줌</td></tr>
 </tbody></table>
 </div>
-<h2 id="learn--learning-paths--unity"><a class="header" href="#learn--learning-paths--unity"><a href="https://www.sidefx.com/learn/unity">Learn &gt; Learning Paths &gt; Unity</a></a></h2>
-<h3 id="start-here"><a class="header" href="#start-here">START HERE</a></h3>
-<ul>
-<li><a href="https://www.sidefx.com/tutorials/unity-starter-kit/">UNITY STARTER KIT</a>
-<ul>
-<li>여러 툴들 소계</li>
-</ul>
-</li>
-<li><a href="https://www.sidefx.com/tutorials/getting-started-with-houdini-engine-for-unity/">GETTING STARTED WITH HOUDINI ENGINE FOR UNITY</a>
-<ul>
-<li>육각형 지형, HDA 생성, unity_instance</li>
-<li>Attribute Create</li>
-<li>Attribute Randomize</li>
-</ul>
-</li>
-<li><a href="https://www.sidefx.com/tutorials/houdini-engine-for-unity-instancing/">HOUDINI ENGINE FOR UNITY | INSTANCING &amp; VARIATION</a>
-<ul>
-<li>Scatter and Align 로 뿌려넣고 unity_instance로 소환</li>
-<li>Attribute Randomize
-<ul>
-<li>Options / Global Seed</li>
-</ul>
-</li>
-<li>Parameter Description / Type: String / Tags / TagName: heuassetpath 로 엔진파라미터로 프리팹 받을 수 있도록 설정.</li>
-</ul>
-</li>
-<li><a href="https://www.sidefx.com/tutorials/houdini-engine-for-unity-session-sync/">HOUDINI ENGINE FOR UNITY | SESSION SYNC</a>
-<ul>
-<li>https://www.sidefx.com/docs/houdini/ref/panes/enginesessionsync.html</li>
-<li>Houdini &gt; New Pane Tab Type &gt; Misc &gt; Houdini Engine SessionSync &gt; Start</li>
-<li>Unity &gt; Houdini Engine &gt; Session Sync &gt; Connect to Houdini</li>
-<li>유니티에서 hda 불러오면, 후디니에서도 보기 가능</li>
-<li>유니티에서 New Node를 생성하면, 후디니에서도 생성됨. 후디니에서 편집가능.
-<ul>
-<li>유니티에서 Save Node로 저장하면 .hess(<code>H</code>oudini <code>E</code>ngine <code>S</code>ession<code>S</code>ync)</li>
-<li>유니티에서 Load NodeSync로 불러오기 가능.</li>
-</ul>
-</li>
-</ul>
-</li>
-<li><a href="https://www.sidefx.com/tutorials/games-quickstart/">GAMES QUICKSTART</a>
-<ul>
-<li>간단한 모델링, 그루핑, 어트리뷰트, HDA, Curve</li>
-<li>Desktop 설정</li>
-<li>단축키 C
-<ul>
-<li><a href="https://www.sidefx.com/tutorials/hotkeys/">HOTKEYS</a></li>
-</ul>
-</li>
-<li>node
-<ul>
-<li>Poly Extrude</li>
-<li>Poly Bevel</li>
-<li>Poly Split</li>
-<li>Bend</li>
-<li>Edit</li>
-<li>Fuse</li>
-<li>Resample</li>
-<li>Copy To Point</li>
-<li>Orientation Along Curve // Curve에서 각도 유지
-<ul>
-<li>파라미터 조정을 통해 사슬과 같은 효과를 낼 수 있다.</li>
-</ul>
-</li>
-<li>Copy To Curve == Orientation Along Curve + Copy To Point</li>
-<li>Draw Curve // 축 기반으로 그리거나, 매쉬에 그릴 수 있음.</li>
-<li>Match Size // 중점 이동</li>
-<li>Trace // Traces curves from an image file or heightfield.</li>
-</ul>
-</li>
-<li>Group
-<ul>
-<li>Group</li>
-<li>Group by Range // with Tube, Poly Extrude</li>
-<li>Group Combine</li>
-<li>Group Promote</li>
-</ul>
-</li>
-<li>Attribute
-<ul>
-<li>Attribute Create</li>
-<li>Attribute Noise // Cd, scale, N, pscale</li>
-<li>Attribute Randomize</li>
-<li>Attribute Promote</li>
-</ul>
-</li>
-<li>6 | MAKE GAME-READY ASSETS
-<ul>
-<li>1
-<ul>
-<li>File</li>
-<li>Labs Game Res // Reduce, Auto UV, Bake</li>
-<li>ROP FBX Output</li>
-</ul>
-</li>
-<li>2
-<ul>
-<li>Poly Reduce</li>
-<li>Auto UV</li>
-<li>Soften Normals</li>
-<li>Labs Map Baker</li>
-</ul>
-</li>
-<li>블록 모서리 깍인 효과
-<ul>
-<li>Attribute Noise - pscale</li>
-<li>Poly Bevel
-<ul>
-<li>Ignore Flat Edges</li>
-<li>Scale By Attribute</li>
-</ul>
-</li>
-</ul>
-</li>
-</ul>
-</li>
-</ul>
-</li>
-<li><a href="https://www.sidefx.com/tutorials/houdini-digital-assets/">HOUDINI DIGITAL ASSETS</a>
-<ul>
-<li>사슬
-<ul>
-<li>Draw Curve - Resample - CopyToCurve
-<ul>
-<li>Apply Yaw
-<ul>
-<li>Yaw: 90</li>
-</ul>
-</li>
-<li>Apply Roll or Twist
-<ul>
-<li>Full Twists: 7</li>
-</ul>
-</li>
-</ul>
-</li>
-</ul>
-</li>
-<li>팬스
-<ul>
-<li>노드
-<ul>
-<li>output, color</li>
-<li>Point Jitter로 변형 (crooked)</li>
-<li>Poly Bevel - Round</li>
-<li>Attribute Noise - scale 로 높이조정</li>
-<li>Attribute Noise - N 로 흩으러짐(회전) 효과</li>
-<li>Distance Along Geometry
-<ul>
-<li>Output Mask로 Ramp값을 할당</li>
-</ul>
-</li>
-<li>Attribute VOP
-<ul>
-<li>Import Point Attribute - mask</li>
-<li>변형주고 scale에 할당.</li>
-</ul>
-</li>
-<li>Labs Color Gradient로 y축 기반 색상 지정.</li>
-<li>Copy To Curve
-<ul>
-<li>Target Type: Next Edge로 이어진 팬스</li>
-<li>Target Up Vector 조절로 뒤집힘 방지.</li>
-</ul>
-</li>
-</ul>
-</li>
-<li>HDA
-<ul>
-<li>Parameter</li>
-<li>Match Current Definition</li>
-</ul>
-</li>
-<li>vex: ch</li>
-</ul>
-</li>
-<li>Type Properties &gt; Node &gt; Guide Geometry
-<ul>
-<li>가이드라인으로 와이어 프레임으로 보여짐.</li>
-<li>Switch추가로 Toggle하여 사용</li>
-</ul>
-</li>
-</ul>
-</li>
-</ul>
-<h2 id="sci-fi-level-design"><a class="header" href="#sci-fi-level-design"><a href="https://www.sidefx.com/learn/collections/sci-fi-level-design/">Sci Fi Level Design</a></a></h2>
-<h3 id="sci-fi-panel-generator"><a class="header" href="#sci-fi-panel-generator">SCI FI PANEL GENERATOR</a></h3>
-<ul>
-<li>PART 1 | MODELING THE PANEL
-<ul>
-<li>PSD를 읽어 모델에 반영</li>
-<li>GameDev Trace PSD File 노드
-<ul>
-<li>레이어 및 Brightness Threshold 지정 가능</li>
-</ul>
-</li>
-<li>Split으로 그룹을 일단 나누고.</li>
-<li>Blaster로 PSDLayerNumber 분리
-<ul>
-<li>@PSDLayerNumber=1 // Delete Non Selected</li>
-</ul>
-</li>
-<li>GameDev Thicken</li>
-<li>GameDev Axis Align</li>
-<li>원통의 Bound를 구하고 Blast로 옆면을 때 Fuse로 중앙 점을 찾음
-<ul>
-<li>Attribute Randomize로 index를 설정하고</li>
-<li>Copy - Stamp - Stamp Input 체크 및 Attribute Stamps에 index ?? 스탬프가 뭘까?</li>
-<li>Switch 쪽에서 stamp("../copy1", "index", 0)</li>
-<li>Create Meta Import Node
-<ul>
-<li>iteration, numiterations, value, ivalue</li>
-</ul>
-</li>
-<li>Attribute Randomize의 Seed에
-<ul>
-<li>detail("../repeat_begin1_metadata1/", "iteration", 0)</li>
-<li>rand(detail("../repeat_begin1_metadata1/", "iteration", 0) + $F)</li>
-</ul>
-</li>
-</ul>
-</li>
-<li>Assemble : 매쉬 정리
-<ul>
-<li>Create Packed Geometry</li>
-</ul>
-</li>
-<li>Blast로 원하는거 몇개 골라서 @P.z &gt; 5</li>
-<li>Unpack</li>
-<li>For-Each Connected Pieces
-<ul>
-<li>Transform
-<ul>
-<li>Pivot Translate : $CEX, $CEY, $CEZ (영상에선 preset 활용했음)</li>
-<li>Scale: 1, 0, 0</li>
-</ul>
-</li>
-<li>Scatter로 랜덤하게 좀 뿌려주고
-<ul>
-<li>Seed: detail("../repeat_begin1_metadata1/", "iteration", 0)</li>
-</ul>
-</li>
-<li>Fuse로 붙어있는거 좀 정리해주고</li>
-<li>Create Meta Import Node</li>
-<li>새로운 갈래
-<ul>
-<li>Transform
-<ul>
-<li>Translate : - $CEX, - $CEY, - $CEZ</li>
-<li>Scale: 0.1, 1, 1</li>
-<li>Pivot Translate : $CEX, $CEY, $CEZ (영상에선 preset 활용했음)</li>
-</ul>
-</li>
-<li>PolyBevel로 볼트처럼 만들고</li>
-</ul>
-</li>
-<li>Copy To Point</li>
-<li>볼트 종류는 Switch로 (switch2)</li>
-<li>Attribute Randomize에서
-<ul>
-<li>Max Value: opninputs("../switch2/") - 1 : opninputs 인풋 갯수 반환</li>
-</ul>
-</li>
-</ul>
-</li>
-</ul>
-</li>
-<li>PART 2 | ADDING DETAIL
-<ul>
-<li>GameDev Trace PSD File 노드
-<ul>
-<li>Split으로 그룹을 일단 나누고. @Cd.r &gt; 5 - Invert Selection
-<ul>
-<li>그룹1 - 선으로 면에 이음선 넣기
-<ul>
-<li>GameDev Straight Skeleton 2D (Beta) / Facet / Fuse 로 선을 얻고 / Attribute Create N을 사이즈3. 값 0, 0, 1</li>
-<li>Sweep - Skin Unclosed으로 Line과 엮어서 판을 만듬.</li>
-<li>For-Each Connnected Piece
-<ul>
-<li>Boolean Shatter</li>
-<li>Poly Bevel</li>
-</ul>
-</li>
-<li>Attribute Delete - Cd</li>
-</ul>
-</li>
-<li>그룹2
-<ul>
-<li>For-Each Connnected Piece
-<ul>
-<li>Fuse</li>
-</ul>
-</li>
-<li>Transform으로 위치를 올려서</li>
-<li>Ray 로 닿는 면과 달라붙도록 만듬.</li>
-<li>Attribute Randomize - N</li>
-</ul>
-</li>
-</ul>
-</li>
-</ul>
-</li>
-<li>그냥 표면
-<ul>
-<li>GameDev Voxel Mesh</li>
-<li>GameDev Measure Culvature</li>
-<li>Blast - @Cd &gt; 0.2</li>
-<li>Group - Keep by Normals - 0, 1, 0</li>
-<li>Scatter</li>
-</ul>
-</li>
-<li>추가 작업
-<ul>
-<li>GameDev Voxel Mesh - Resolution을 다르게 해서 high, low폴리 제작</li>
-<li>Lattice</li>
-<li>Poly Reduce</li>
-<li>Group - 0, -1, 0의 하단 패널 부분을 선택</li>
-<li>Blast</li>
-<li>GameDev Delete Small Parts</li>
-</ul>
-</li>
-<li>파이프
-<ul>
-<li>Group - Include by Edge - Min Edge Angle을 조정하여 각진 부분만 그룹핑</li>
-<li>Poly Bevel</li>
-<li>Subdivide</li>
-</ul>
-</li>
-<li>파이프 클립
-<ul>
-<li>Clip으로 파이프 전체가 아닌 단면만을 사용가능.</li>
-</ul>
-</li>
-<li>마무리
-<ul>
-<li>GameDev Remove Inside Faces</li>
-<li>GameDev Auto UV - UV Unwrap</li>
-<li>GameDev Soften Normal - Harden UV Seams</li>
-</ul>
-</li>
-</ul>
-</li>
-<li>PART 3 | CREATING THE DIGITAL ASSET
-<ul>
-<li>HDA 설정</li>
-</ul>
-</li>
-</ul>
-<h3 id="sci-fi-crate-generator"><a class="header" href="#sci-fi-crate-generator">SCI FI CRATE GENERATOR</a></h3>
-<ul>
-<li>PART 1 | MODEL THE CRATE
-<ul>
-<li>Box / GameDev Axis Align / Null(IN)</li>
-<li>Boolean - Shatter로 뚜껑을 구분지음 - A-Only Piece
-<ul>
-<li>Grid - 0, bbox("../IN/", D_YSIZE) * 0.8</li>
-</ul>
-</li>
-<li>IN_Part_01
-<ul>
-<li>group / blast / polybevel / polyfill 로 윗단을 날리고 하단을 부드럽게 하고 윗단을 다시 채운다</li>
-</ul>
-</li>
-</ul>
-</li>
-</ul>
-
                     </main>
 
                     <nav class="nav-wrapper" aria-label="Page navigation">
