--- a/node/geometry/geo_node.html
+++ b/node/geometry/geo_node.html
@@ -24,9 +24,9 @@
         <link rel="stylesheet" href="../../fonts/fonts.css">
 
         <!-- Highlight.js Stylesheets -->
-        <link rel="stylesheet" href="../../highlight.css">
-        <link rel="stylesheet" href="../../tomorrow-night.css">
-        <link rel="stylesheet" href="../../ayu-highlight.css">
+        <link rel="stylesheet" id="highlight-css" href="../../highlight.css">
+        <link rel="stylesheet" id="tomorrow-night-css" href="../../tomorrow-night.css">
+        <link rel="stylesheet" id="ayu-highlight-css" href="../../ayu-highlight.css">
 
         <!-- Custom theme stylesheets -->
 
@@ -259,6 +259,7 @@
 <tr><td>subdivide</td><td>나누기. // 선의 중앙점도 쉽게 구할 수 있다</td></tr>
 <tr><td>font</td><td>텍스트 쓰기 text</td></tr>
 <tr><td>Intersection Stitch</td><td>ex 선 겹칠때 접점을 기준으로 나누기. 교차로</td></tr>
+<tr><td>Primitive Properties</td><td>Primitive의 수치 조정. 각 프리미티브 회전 등등</td></tr>
 </tbody></table>
 </div>
 <p>Distance along Geometry - https://www.sidefx.com/docs/houdini/nodes/sop/distancealonggeometry.html</p>
