--- a/etc/reference.html
+++ b/etc/reference.html
@@ -24,9 +24,9 @@
         <link rel="stylesheet" href="../fonts/fonts.css">
 
         <!-- Highlight.js Stylesheets -->
-        <link rel="stylesheet" href="../highlight.css">
-        <link rel="stylesheet" href="../tomorrow-night.css">
-        <link rel="stylesheet" href="../ayu-highlight.css">
+        <link rel="stylesheet" id="highlight-css" href="../highlight.css">
+        <link rel="stylesheet" id="tomorrow-night-css" href="../tomorrow-night.css">
+        <link rel="stylesheet" id="ayu-highlight-css" href="../ayu-highlight.css">
 
         <!-- Custom theme stylesheets -->
 
@@ -384,29 +384,6 @@
 </ul>
 </li>
 </ul>
-<h2 id="-1"><a class="header" href="#-1"></a></h2>
-<ul>
-<li>
-<p><a href="https://www.youtube.com/watch?v=emeTkdTQgGA">[NDC21-비주얼아트&amp;사운드] Making Hard Surface Easy</a></p>
-<ul>
-<li><a href="https://www.youtube.com/watch?v=HZd4hQJ2MfA">Embark Asset Processor | Erik Hallberg | GDC HIVE 2023</a></li>
-</ul>
-</li>
-<li>
-<p>Subdivision</p>
-<ul>
-<li>마스터하기 어려움</li>
-<li>토폴로지에 대한 이해</li>
-</ul>
-</li>
-<li>
-<p>Zbrush</p>
-<ul>
-<li>Dynamesh, Polish</li>
-<li>파괴적</li>
-</ul>
-</li>
-</ul>
 <h2 id="gdc"><a class="header" href="#gdc">GDC</a></h2>
 <p><a href="https://youtu.be/bCcmwdrSTvM">Game Development Made Easy Using Houdini | Paul Ambrosiussen | GDC 2018</a></p>
 <p>ref - <a href="https://youtu.be/H4r_69WNE9o">Video games Created using Houdini</a></p>
@@ -431,14 +408,49 @@
 </ul>
 </li>
 </ul>
-<h2 id="-2"><a class="header" href="#-2"></a></h2>
+<h2 id="-1"><a class="header" href="#-1"></a></h2>
 <p>https://www.appliedhoudini.com/</p>
+<h2 id="person"><a class="header" href="#person">person</a></h2>
+<h3 id="luiz-kruel"><a class="header" href="#luiz-kruel">LUIZ KRUEL</a></h3>
+<ul>
+<li>https://www.luizkruel.com/</li>
+<li><a href="https://www.youtube.com/watch?v=-LHj7-kROoo">GDC2017 - Technical Artist Bootcamp: Introduction to Proceduralism</a></li>
+<li><a href="https://www.youtube.com/watch?v=eawAPiUliPE">GDC 2018 - Game Development Tips and Tricks | Luiz Kruel</a></li>
+<li><a href="https://www.youtube.com/watch?v=7X-r_XarMLI">"Game" Development Tools | Luiz Kruel | SIGGRAPH 2019</a></li>
+</ul>
+<h3 id="erik-hallberg"><a class="header" href="#erik-hallberg">Erik Hallberg</a></h3>
+<ul>
+<li>
+<p><a href="https://www.youtube.com/watch?v=emeTkdTQgGA">[NDC21-비주얼아트&amp;사운드] Making Hard Surface Easy</a></p>
+<ul>
+<li><a href="https://www.youtube.com/watch?v=HZd4hQJ2MfA">Embark Asset Processor | Erik Hallberg | GDC HIVE 2023</a></li>
+</ul>
+</li>
+<li>
+<p>Subdivision</p>
+<ul>
+<li>마스터하기 어려움</li>
+<li>토폴로지에 대한 이해</li>
+</ul>
+</li>
+<li>
+<p>Zbrush</p>
+<ul>
+<li>Dynamesh, Polish</li>
+<li>파괴적</li>
+</ul>
+</li>
+</ul>
+<h3 id="paul-ambrosiussen"><a class="header" href="#paul-ambrosiussen">Paul Ambrosiussen</a></h3>
+<ul>
+<li>https://www.youtube.com/@paulambrosiussen/videos</li>
+</ul>
 
                     </main>
 
                     <nav class="nav-wrapper" aria-label="Page navigation">
                         <!-- Mobile navigation buttons -->
-                            <a rel="prev" href="../tutorial/project_titan.html" class="mobile-nav-chapters previous" title="Previous chapter" aria-label="Previous chapter" aria-keyshortcuts="Left">
+                            <a rel="prev" href="../sidefx/sidefx-learn/sidefx-learn.html" class="mobile-nav-chapters previous" title="Previous chapter" aria-label="Previous chapter" aria-keyshortcuts="Left">
                                 <i class="fa fa-angle-left"></i>
                             </a>
 
@@ -452,7 +464,7 @@
             </div>
 
             <nav class="nav-wide-wrapper" aria-label="Page navigation">
-                    <a rel="prev" href="../tutorial/project_titan.html" class="nav-chapters previous" title="Previous chapter" aria-label="Previous chapter" aria-keyshortcuts="Left">
+                    <a rel="prev" href="../sidefx/sidefx-learn/sidefx-learn.html" class="nav-chapters previous" title="Previous chapter" aria-label="Previous chapter" aria-keyshortcuts="Left">
                         <i class="fa fa-angle-left"></i>
                     </a>
 
