--- a/node/geometry/uv.html
+++ b/node/geometry/uv.html
@@ -24,9 +24,9 @@
         <link rel="stylesheet" href="../../fonts/fonts.css">
 
         <!-- Highlight.js Stylesheets -->
-        <link rel="stylesheet" href="../../highlight.css">
-        <link rel="stylesheet" href="../../tomorrow-night.css">
-        <link rel="stylesheet" href="../../ayu-highlight.css">
+        <link rel="stylesheet" id="highlight-css" href="../../highlight.css">
+        <link rel="stylesheet" id="tomorrow-night-css" href="../../tomorrow-night.css">
+        <link rel="stylesheet" id="ayu-highlight-css" href="../../ayu-highlight.css">
 
         <!-- Custom theme stylesheets -->
 
@@ -164,6 +164,8 @@
 <p><a href="https://www.youtube.com/watch?v=T80MY8Qaxp0">Houdini Tutorial - Under 10 Minutes - How to UV Map complex geometry</a></p>
 <p><a href="https://www.youtube.com/watch?v=DN95J9ORp90">Tools in Houdini for normal baking tutorial. Part 1</a></p>
 <p><a href="https://www.youtube.com/watch?v=xMwuKEenr4M">Transfer texture maps to new UV coordinates in Houdini</a></p>
+<p><a href="https://www.youtube.com/watch?v=7kUDLsNn0iA">Procedural UVs - UV Layout Node in Depth</a></p>
+<p><a href="https://www.youtube.com/watch?v=VNX9Qf6a5hs">Houdini Unwrapping Techniques: The Basics</a></p>
 <ul>
 <li>uv ref
 <ul>
@@ -172,18 +174,70 @@
 </ul>
 </li>
 </ul>
-<div class="table-wrapper"><table><thead><tr><th>UV</th><th></th></tr></thead><tbody>
+<div class="table-wrapper"><table><thead><tr><th>Seams 경계선</th><th></th></tr></thead><tbody>
+<tr><td>UV Autoseam</td><td></td></tr>
+<tr><td>Group</td><td></td></tr>
+</tbody></table>
+</div><div class="table-wrapper"><table><thead><tr><th>UV Create</th><th></th></tr></thead><tbody>
+<tr><td>UV Project</td><td>프로젝션 기법을 이용하여 UV 전개</td></tr>
+<tr><td>UV Flatten</td><td>flattening constraints// Seam(이음매), Rectify(바로잡다)</td></tr>
+<tr><td>AutoUV</td><td>SideFXLab 에 통합됨</td></tr>
 <tr><td>UV Unwrap</td><td>자동 uv 평탄화 및 구릅핑</td></tr>
 <tr><td>UV Texture</td><td>평면은 물론, 구형이나 원통형을 UV 전개</td></tr>
-<tr><td>UV Flatten</td><td>flattening constraints// Seam(이음매), Rectify(바로잡다)</td></tr>
-<tr><td>UV Layout</td><td>uv 그룹 배치</td></tr>
+<tr><td>Sweep</td><td></td></tr>
+<tr><td>UV Pelt</td><td></td></tr>
+<tr><td>Labs UV Unwrap Cylinder</td><td></td></tr>
+</tbody></table>
+</div><div class="table-wrapper"><table><thead><tr><th>UV Editing</th><th></th></tr></thead><tbody>
 <tr><td>UV Edit</td><td></td></tr>
+<tr><td>UV Transform</td><td></td></tr>
+<tr><td>UV Fuse</td><td></td></tr>
+<tr><td>UV Layout</td><td>uv 그룹 배치</td></tr>
+<tr><td>UV Smooth</td><td></td></tr>
+<tr><td>UV Brush</td><td></td></tr>
+<tr><td>Labs UV Unitize</td><td></td></tr>
+</tbody></table>
+</div><div class="table-wrapper"><table><thead><tr><th>Validation</th><th></th></tr></thead><tbody>
+<tr><td>Labs UV Distortion</td><td></td></tr>
+<tr><td>Labs Calculate UV Distortion</td><td></td></tr>
+<tr><td>Labs UV Remove Overlap</td><td></td></tr>
+<tr><td>Labs Texel Density</td><td></td></tr>
+</tbody></table>
+</div><div class="table-wrapper"><table><thead><tr><th>Preview</th><th></th></tr></thead><tbody>
 <tr><td>UV QuickShade</td><td>평면 // grid 한장</td></tr>
-<tr><td>UV Project</td><td>프로젝션 기법을 이용하여 UV 전개</td></tr>
-<tr><td>AutoUV</td><td>SideFXLab 에 통합됨</td></tr>
 <tr><td>Labs UV Visualize</td><td>UV 시각화</td></tr>
+<tr><td>Labs Export UV Wireframe</td><td></td></tr>
 </tbody></table>
 </div>
+<p>sphere - uvproject (polar)</p>
+<ul>
+<li>UV Layout
+<ul>
+<li>Connectivity
+<ul>
+<li>Seperate Edges - 액자같은거 Group으로 edge잘라서</li>
+<li>Island Attribute - Copy같이 여러개 만들었을때 attribute 만들고 unpack (transfer attribute)하고</li>
+</ul>
+</li>
+</ul>
+</li>
+</ul>
+<p>udim
+https://www.sidefx.com/docs/houdini/solaris/udim.html
+UDIM is a system for dividing texture space into multiple “tiles” in UV space, with each tile represented by a separate texture file on disk.</p>
+<p><img src="../../res/udim.svg" alt="" /></p>
+<ul>
+<li>1001 기준
+<ul>
+<li>1만큼 옆으로(U)</li>
+<li>10만큼 위로(V)</li>
+</ul>
+</li>
+</ul>
+<hr />
+<p>Labs Automatic Trim Texture
+Labs Trim Texture</p>
+
                     </main>
 
                     <nav class="nav-wrapper" aria-label="Page navigation">
