--- a/script/glsl.html
+++ b/script/glsl.html
@@ -24,9 +24,9 @@
         <link rel="stylesheet" href="../fonts/fonts.css">
 
         <!-- Highlight.js Stylesheets -->
-        <link rel="stylesheet" href="../highlight.css">
-        <link rel="stylesheet" href="../tomorrow-night.css">
-        <link rel="stylesheet" href="../ayu-highlight.css">
+        <link rel="stylesheet" id="highlight-css" href="../highlight.css">
+        <link rel="stylesheet" id="tomorrow-night-css" href="../tomorrow-night.css">
+        <link rel="stylesheet" id="ayu-highlight-css" href="../ayu-highlight.css">
 
         <!-- Custom theme stylesheets -->
 
@@ -158,8 +158,44 @@
 
                 <div id="content" class="content">
                     <main>
-                        <ul>
-<li>https://www.sidefx.com/docs/houdini/shade/glsl.html</li>
+                        <h1 id="glsl"><a class="header" href="#glsl">GLSL</a></h1>
+<ul>
+<li><a href="https://www.sidefx.com/docs/houdini/shade/glsl.html">https://www.sidefx.com/docs/houdini/shade/glsl.html</a></li>
+</ul>
+<h2 id="커스텀-glsl"><a class="header" href="#커스텀-glsl">커스텀 GLSL</a></h2>
+<ul>
+<li>
+<p>File &gt; New Assets...</p>
+<ul>
+<li>Definition : VOPs</li>
+<li>Network Type : GLSL Shader</li>
+<li>Code 탭에서 셰이더 작성</li>
+</ul>
+</li>
+<li>
+<p>Material Network</p>
+<ul>
+<li>생성된 노드 추가</li>
+</ul>
+</li>
+<li>
+<p>Sphere - UV Unwrap - Material</p>
+<ul>
+<li>Material: 에 Material Network에 추가된 것 추가</li>
+</ul>
+</li>
+</ul>
+<h2 id="shop--deprecated-"><a class="header" href="#shop--deprecated-">SHOP ( Deprecated )</a></h2>
+<ul>
+<li>SHOP Network
+<ul>
+<li>Material Shader Builder
+<ul>
+<li>Inline Code</li>
+</ul>
+</li>
+</ul>
+</li>
 </ul>
 
                     </main>
